# aerie

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: rim-latency.md
examples/: spiral_stress.rs
packaging/arch/: .SRCINFO  PKGBUILD
snap/: snapcraft.yaml
src/: diag.rs  local.rs  main.rs  proxmox.rs  remote.rs  ui.rs
tests/: packaging_versions.rs
