[package]
name = "aerie"
version = "1.0.3"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "Process-group performance monitor with Proxmox VM support and SSH drill-down"
repository = "https://github.com/perpetualbits/aerie"
homepage = "https://github.com/perpetualbits/aerie"
categories = ["command-line-utilities"]
keywords = ["monitoring", "performance", "top", "proxmox", "processes"]

[package.metadata.deb]
maintainer = "Epsilon Null Operation <perpetualbits@gmail.com>"
copyright = "2026, Epsilon Null Operation"
license-file = ["LICENSE", "4"]
extended-description = """\
Process-group performance monitor that reads /proc and groups processes by \
name, cgroup, or executable. Shows a dual-metric bar chart with CPU%, \
memory (fraction of physical RAM), disk I/O rates, page faults, context \
switches, open FDs, swap, scheduler wait, and estimated power (RAPL). \
Supports Proxmox VE API polling and optional SSH drill-down into VMs."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/aerie", "usr/bin/aerie", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/aerie", dest = "/usr/bin/aerie", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/licenses/aerie/LICENSE", mode = "644" },
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
mullion = { path = "../mullion", version = "0.2.0" }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
